k8s/production/explorer-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-ui
  name: explorer-ui
  namespace: chicmoz-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: explorer-ui
    spec:
      imagePullSecrets:
        - name: registry-aztlan-containers
      containers:
        - image: registry.digitalocean.com/aztlan-containers/explorer-ui:latest
          resources:
            limits:
              memory: 500Mi
              cpu: 200m
          ports:
            - name: http-app
              containerPort: 3000
              protocol: TCP
          name: explorer-ui
status: {}
