k8s/production/explorer-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-ui
  namespace: chicmoz-prod
spec:
  selector:
    app: explorer-ui
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: 80 # TODO
