k8s/production/explorer-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-explorer-ui
  namespace: chicmoz-prod
spec:
  ingressClassName: nginx
  rules:
    - host: explorer-ui.localhost
      http:
        paths:
          - backend:
              service:
                name: explorer-ui
                port:
                  name: http-app
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
